# People-_HeadCount_Detection

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  app2.py  docker-compose.yml  my.py  phase2.patch  requirements.txt
backend/: alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  scheduler.py  security.py
backend/app/models/: __init__.py  alert.py  api_token.py  audit.py  camera.py  detection.py  heatmap.py  job.py  notification.py  org.py  plan.py  public_page.py  template.py  user.py
backend/app/routers/: alerts.py  analytics.py  api_tokens.py  audit.py  auth.py  cameras.py  detect.py  heatmaps.py  jobs.py  notifications.py  plan.py  public.py  reports.py  stream.py  templates.py
backend/app/schemas/: __init__.py  alert.py  auth.py  camera.py  common.py  detection.py  job.py  user.py
backend/app/services/: __init__.py  alerts.py  anomaly.py  detector.py  heatmap.py  notifier.py  reporter.py  stream_manager.py  video_processor.py
backend/app/workers/: __init__.py  jobs.py
backend/backend/storage/: peoplesense.db
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: add_cooldown_and_capacity.py
backend/tests/: conftest.py  test_alerts.py  test_analytics.py  test_anomaly.py  test_api_tokens.py  test_auth.py  test_cameras.py  test_detect.py  test_health.py  test_notifications.py  test_public.py  test_templates.py
frontend/: .eslintrc.cjs  index.html  nginx.conf  package-lock.json  package.json  (+3 more)
(+35 files in other folders)
