[project]
name = "peoplesense-backend"
version = "0.1.0"
description = "Backend API for PeopleSense — real-time people counting & crowd analytics platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.2",
    "ultralytics>=8.1",
    "supervision>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.3",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
